[package]
name = "shaderpark"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
#klystron = { git = "https://github.com/Masterchef365/klystron.git" }
klystron = { path = "../klystron/" }
anyhow = "1.0"
nalgebra = "0.22"
notify = "4.0"
shaderc = "0.7"
